Fix menu category alignment (#433) (#434)

--- a/src/css/side-nav.css
+++ b/src/css/side-nav.css
@@ -52,7 +52,7 @@
 [data-theme]
   .clean-btn:not(.toggleButton_src-theme-ColorModeToggle-styles-module):not(
     .overlayHeaderButton_src-components-APIMethods-components-CodeExample-styles-module
-  ):not(.theme-back-to-top-button) {
+  ):not(.theme-back-to-top-button):not(.menu__caret) {
   width: 2rem;
   padding: 0;
 }
